index.html: Add a comment regarding anchors

--- a/foundations_course/html_foundations/odin-links-and-images/index.html
+++ b/foundations_course/html_foundations/odin-links-and-images/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <title>Odin Links and Images</title>
   </head>
+
+  <!--
+    The <a> tag or anchor element makes the text a link to another
+    destination. The destination is defined using the href
+    (hypertext reference) attribute.
+  -->
+
   <body>
     <h1>Homepage</h1>
     <a href="https://www.theodinproject.com/about">click me</a>
