--- a/foundations_course/html_foundations/odin-links-and-images/index.html
+++ b/foundations_course/html_foundations/odin-links-and-images/index.html
@@ -13,6 +13,8 @@
 
   <body>
     <h1>Homepage</h1>
-    <a href="https://www.theodinproject.com/about">click me</a>
+    <a href="https://www.theodinproject.com/about" target="_blank">
+      click me
+    </a>
   </body>
 </html>
