index.html: Expand comment on the anchor element

--- a/foundations_course/html_foundations/odin-links-and-images/index.html
+++ b/foundations_course/html_foundations/odin-links-and-images/index.html
@@ -7,8 +7,15 @@
 
   <!--
     The <a> tag or anchor element makes the text a link to another
-    destination. The destination is defined using the href
+    destination.
+    
+    The destination is defined using the href
     (hypertext reference) attribute.
+
+    The target attribute determines where the referenced link will be
+    opened. The _self value (default if the attribute is not specified)
+    will open the link in the current tab, while the _blank value will
+    open the link in a new tab.
   -->
 
   <body>
