--- a/foundations_course/html_foundations/odin-links-and-images/index.html
+++ b/foundations_course/html_foundations/odin-links-and-images/index.html
@@ -16,6 +16,16 @@
     opened. The _self value (default if the attribute is not specified)
     will open the link in the current tab, while the _blank value will
     open the link in a new tab.
+
+    The rel attribute defines the relationship between the current page
+    and the referenced link. The noopener is a value that prevents the
+    opened link from accessing the webpage it was opened from, and
+    noreferrer prevents the opened link from knowing which page or
+    resource has a link to it. The noferrer value also inherits
+    noopener's behaviour, so it can be used on its own.
+
+    Setting rel with these values adds security to webpages as it can
+    prevent phishing attacks.
   -->
 
   <body>
