about.html: Fix referenced link to about.html
about.html was moved to another directory, so the fix references the
correct lcoation of about.html.

--- a/foundations_course/html_foundations/odin-links-and-images/index.html
+++ b/foundations_course/html_foundations/odin-links-and-images/index.html
@@ -35,7 +35,7 @@
       click me
       </a>
       <p>
-        <a href="about.html">About</a>
+        <a href="pages/about.html">About</a>
       </p>
   </body>
 </html>
