--- a/foundations_course/html_foundations/odin-links-and-images/index.html
+++ b/foundations_course/html_foundations/odin-links-and-images/index.html
@@ -37,6 +37,6 @@
       <p>
         <a href="./pages/about.html">About</a>
       </p>
-      <img src="./images/dog.jpg">
+      <img src="./images/dog.jpg" alt="Black Pug">
   </body>
 </html>
