about.html: Change height and width of dog image

--- a/foundations_course/html_foundations/odin-links-and-images/pages/about.html
+++ b/foundations_course/html_foundations/odin-links-and-images/pages/about.html
@@ -7,6 +7,6 @@
   
   <body>
     <h1>About Page</h1>
-      <img src="../images/dog.jpg" alt="Black Pug">
+      <img src="../images/dog.jpg" alt="Black Pug" height="426.5" width="320">
   </body>
 </html>
