index.html: Expand on dog image's alt attribute

--- a/foundations_course/html_foundations/odin-links-and-images/index.html
+++ b/foundations_course/html_foundations/odin-links-and-images/index.html
@@ -37,6 +37,9 @@
       <p>
         <a href="./pages/about.html">About</a>
       </p>
-      <img src="./images/dog.jpg" alt="Black Pug" height="426.5" width="320">
+      <img src="./images/dog.jpg"
+        alt="A black pug looking into the camera behind behind a yellow
+        background wearing a white and black scarf."
+        height="426.5" width="320">
   </body>
 </html>
