about.html: Expand on dog image's alt attribute

--- a/foundations_course/html_foundations/odin-links-and-images/pages/about.html
+++ b/foundations_course/html_foundations/odin-links-and-images/pages/about.html
@@ -7,6 +7,9 @@
   
   <body>
     <h1>About Page</h1>
-      <img src="../images/dog.jpg" alt="Black Pug" height="426.5" width="320">
+      <img src="../images/dog.jpg"
+      alt="A black pug looking into the camera behind behind a yellow
+      background wearing a white and black scarf."
+      height="426.5" width="320">
   </body>
 </html>
