--- a/foundations_course/html_foundations/odin-recipes/index.html
+++ b/foundations_course/html_foundations/odin-recipes/index.html
@@ -6,5 +6,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+      <ul>
+        <li>
+          <a href="./recipes/fruit-salad-custard.html">Fruit Salad Custard</a>
+        </li>
+      </ul>
   </body>
 </html>
