--- a/foundations_course/html_foundations/odin-recipes/recipes/fruit-salad-custard.html
+++ b/foundations_course/html_foundations/odin-recipes/recipes/fruit-salad-custard.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Fruit Salad Custard</h1>
-      <img src="../img/fruit-salad-custard.jpg">
+      <img src="../img/fruit-salad-custard.jpg" height="325" width="250">
   </body>
 </html>
