--- a/foundations_course/html_foundations/odin-recipes/recipes/fruit-salad-custard.html
+++ b/foundations_course/html_foundations/odin-recipes/recipes/fruit-salad-custard.html
@@ -7,5 +7,6 @@
   <body>
     <h1>Fruit Salad Custard</h1>
       <img src="../img/fruit-salad-custard.jpg" height="325" width="250">
+    <h2>Description</h2>
   </body>
 </html>
