Add ingredients heading under recipe description

--- a/foundations_course/html_foundations/odin-recipes/recipes/fruit-salad-custard.html
+++ b/foundations_course/html_foundations/odin-recipes/recipes/fruit-salad-custard.html
@@ -8,5 +8,10 @@
     <h1>Fruit Salad Custard</h1>
       <img src="../img/fruit-salad-custard.jpg" height="325" width="250">
     <h2>Description</h2>
+      <p>
+        This sweet and fruity salad is sure to bring a smile to everyone
+        on the dining table after a hearty meal.
+      </p>
+    <h2>Ingredients:</h2>
   </body>
 </html>
