Add unordered list of ingredients under heading

--- a/foundations_course/html_foundations/odin-recipes/recipes/fruit-salad-custard.html
+++ b/foundations_course/html_foundations/odin-recipes/recipes/fruit-salad-custard.html
@@ -13,5 +13,12 @@
         on the dining table after a hearty meal.
       </p>
     <h2>Ingredients:</h2>
+      <ul>
+        <li>An apple chopped into small square chunks.</li>
+        <li>An orange chopped into halved quarters.</li>
+        <li>A fistful of blueberries.</li>
+        <li>3 strawberries cut into thin slices.</li>
+        <li>200mL of liquid custard.</li>
+      </ul>
   </body>
 </html>
