Add steps heading under ingredients list

--- a/foundations_course/html_foundations/odin-recipes/recipes/fruit-salad-custard.html
+++ b/foundations_course/html_foundations/odin-recipes/recipes/fruit-salad-custard.html
@@ -20,5 +20,6 @@
         <li>3 strawberries cut into thin slices.</li>
         <li>200mL of liquid custard.</li>
       </ul>
+    <h2>Steps:</h2>
   </body>
 </html>
