Add list of steps to create recipe

--- a/foundations_course/html_foundations/odin-recipes/recipes/fruit-salad-custard.html
+++ b/foundations_course/html_foundations/odin-recipes/recipes/fruit-salad-custard.html
@@ -21,5 +21,18 @@
         <li>200mL of liquid custard.</li>
       </ul>
     <h2>Steps:</h2>
+      <ol>
+        <li>
+          Add all your prepared fruits into a sizable bowl and mix
+          it all together.
+        </li>
+        <li>
+          Pour your custard into the fruit bowl until reaching desired
+          quantity.
+        </li>
+        <li>
+          Repeat steps if serving more than one person, and enjoy.
+        </li>
+      </ol>
   </body>
 </html>
