--- a/foundations_course/html_foundations/odin-recipes/recipes/fruit-salad-custard.html
+++ b/foundations_course/html_foundations/odin-recipes/recipes/fruit-salad-custard.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <h1>Fruit Salad Custard</h1>
-      <img src="../img/fruit-salad-custard.jpg" height="325" width="250">
+      <img src="../img/fruit-salad-custard.jpg" height="325" width="250"
+        alt="A cup of fruit salad filled with custard.">
     <h2>Description</h2>
       <p>
         This sweet and fruity salad is sure to bring a smile to everyone
