Add anchor element to basic omelette recipe page

--- a/foundations_course/html_foundations/odin-recipes/index.html
+++ b/foundations_course/html_foundations/odin-recipes/index.html
@@ -9,6 +9,7 @@
       <ul>
         <li>
           <a href="./recipes/fruit-salad-custard.html">Fruit Salad Custard</a>
+          <a href="./recipes/basic-omelette.html">Basic Omelette</a>
         </li>
       </ul>
   </body>
