Reduce height and width of omelette image

--- a/foundations_course/html_foundations/odin-recipes/recipes/basic-omelette.html
+++ b/foundations_course/html_foundations/odin-recipes/recipes/basic-omelette.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Basic Omelette</h1>
-      <img src="../img/basic-omelette.jpg">
+      <img src="../img/basic-omelette.jpg" height="341.5" width="512">
   </body>
 </html>
