Add description heading under image

--- a/foundations_course/html_foundations/odin-recipes/recipes/basic-omelette.html
+++ b/foundations_course/html_foundations/odin-recipes/recipes/basic-omelette.html
@@ -7,5 +7,6 @@
   <body>
     <h1>Basic Omelette</h1>
       <img src="../img/basic-omelette.jpg" height="341.5" width="512">
+    <h2>Description:</h2>
   </body>
 </html>
