--- a/foundations_course/html_foundations/odin-recipes/recipes/basic-omelette.html
+++ b/foundations_course/html_foundations/odin-recipes/recipes/basic-omelette.html
@@ -8,5 +8,10 @@
     <h1>Basic Omelette</h1>
       <img src="../img/basic-omelette.jpg" height="341.5" width="512">
     <h2>Description:</h2>
+      <p>
+        Sometimes you have no time to cook up a full breakfast, which
+        is where a simple omelette comes in, since it's quick and easy
+        to cook.
+      </p>
   </body>
 </html>
