Add ingredients heading under description

--- a/foundations_course/html_foundations/odin-recipes/recipes/basic-omelette.html
+++ b/foundations_course/html_foundations/odin-recipes/recipes/basic-omelette.html
@@ -13,5 +13,6 @@
         is where a simple omelette comes in, since it's quick and easy
         to cook.
       </p>
+    <h2>Ingredients:</h2>
   </body>
 </html>
