--- a/foundations_course/html_foundations/odin-recipes/recipes/basic-omelette.html
+++ b/foundations_course/html_foundations/odin-recipes/recipes/basic-omelette.html
@@ -14,5 +14,8 @@
         to cook.
       </p>
     <h2>Ingredients:</h2>
+      <ul>
+        <li>As many eggs needed.</li>
+      </ul>
   </body>
 </html>
