Add list of steps below ingredients list

--- a/foundations_course/html_foundations/odin-recipes/recipes/basic-omelette.html
+++ b/foundations_course/html_foundations/odin-recipes/recipes/basic-omelette.html
@@ -18,5 +18,30 @@
         <li>As many eggs needed.</li>
       </ul>
     <h2>Steps:</h2>
+      <ol>
+        <li>
+          Preheat oil at medium temperature in a sizable pan.
+        </li>
+        <li>
+          Crack open eggs into a big enough bowl and lightly whisk them
+          until mixed well.
+        </li>
+        <li>
+          Pour bowl of whisked eggs into heated pan and allow the bottom
+          of the omelette to cook. Check the bottom of it by lifting it
+          with a spatula to make sure it doesn't burn.
+        </li>
+        <li>
+          Flip the omelette when the bottom has cooked well enough and
+          make sure to check the other side doesn't burn.
+        </li>
+        <li>
+          Turn the heat off when the omelette is completely cooked and
+          transfer to a plate to cool down.
+        </li>
+        <li>
+          When cooled down enough, enjoy. Can be served with tomato sauce.
+        </li>
+      </ol>
   </body>
 </html>
