Add list of projects under foundations heading

--- a/projects/index.html
+++ b/projects/index.html
@@ -7,5 +7,9 @@
   <body>
     <h1>TOP Projects</h1>
     <h2>Foundations Course:</h2>
+      <ul>
+        <li>Odin Links and Images</li>
+        <li>Odin Recipes</li>
+      </ul>
   </body>
 </html>
