--- a/projects/index.html
+++ b/projects/index.html
@@ -8,8 +8,12 @@
     <h1>TOP Projects</h1>
     <h2>Foundations Course:</h2>
       <ul>
-        <li>Odin Links and Images</li>
-        <li>Odin Recipes</li>
+        <li>
+          <em>Odin Links and Images</em>
+        </li>
+        <li>
+          <em>Odin Recipes</em>
+        </li>
       </ul>
   </body>
 </html>
