--- a/projects/index.html
+++ b/projects/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>TOP Projects</h1>
     <h2>Foundations Course:</h2>
+    <h3>HTML Foundations -</h3>
       <ul>
         <li>
           <em>Odin Links and Images</em>
