Convert projects list items into links

--- a/projects/index.html
+++ b/projects/index.html
@@ -10,10 +10,18 @@
     <h3>HTML Foundations -</h3>
       <ul>
         <li>
-          <em>Odin Links and Images</em>
+          <em>
+            <a href="./foundations_course/html_foundations/odin-links-and-images/index.html">
+              Odin Links and Images
+            </a>
+          </em>
         </li>
         <li>
-          <em>Odin Recipes</em>
+          <em>
+            <a href="./foundations_course/html_foundations/odin-recipes/index.html">
+              Odin Recipes
+            </a>
+          </em>
         </li>
       </ul>
   </body>
