Assign a class to main heading

--- a/projects/foundations_course/css_foundations/odin-recipes-css/index.html
+++ b/projects/foundations_course/css_foundations/odin-recipes-css/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style/style.css">
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="top_heading">Odin Recipes</h1>
       <ul>
         <li>
           <a href="./recipes/fruit-salad-custard.html">Fruit Salad Custard</a>
