Nest recipe list into a container with a new class

--- a/projects/foundations_course/css_foundations/odin-recipes-css/index.html
+++ b/projects/foundations_course/css_foundations/odin-recipes-css/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1 class="top-heading">Odin Recipes</h1>
+    <div class="recipe-list">
       <ul>
         <li>
           <a href="./recipes/fruit-salad-custard.html">Fruit Salad Custard</a>
@@ -15,5 +16,6 @@
           <a href="./recipes/basic-omelette.html">Basic Omelette</a>
         </li>
       </ul>
+    </div>
   </body>
 </html>
