Add updated recipe website to homepage

--- a/projects/index.html
+++ b/projects/index.html
@@ -23,6 +23,13 @@
             </a>
           </em>
         </li>
+        <li>
+          <em>
+            <a href="./foundations_course/css_foundations/odin-recipes-css/index.html">
+              Odin Recipes (With CSS)
+            </a>
+          </em>
+        </li>
       </ul>
   </body>
 </html>
