Add new header and move recipe to new list
The updated Odin Recipes page needs to be in a separate list of CSS
Foundations projects.

--- a/projects/index.html
+++ b/projects/index.html
@@ -23,6 +23,9 @@
             </a>
           </em>
         </li>
+      </ul>
+    <h3>CSS Foundations -</h3>
+      <ul>
         <li>
           <em>
             <a href="./foundations_course/css_foundations/odin-recipes-css/index.html">
