--- a/projects/foundations_course/css_foundations/odin-recipes-css/recipes/fruit-salad-custard.html
+++ b/projects/foundations_course/css_foundations/odin-recipes-css/recipes/fruit-salad-custard.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../style/style.css">
     <title>Fruit Salad Custard</title>
   </head>
   <body>
