--- a/projects/foundations_course/css_foundations/odin-recipes-css/recipes/fruit-salad-custard.html
+++ b/projects/foundations_course/css_foundations/odin-recipes-css/recipes/fruit-salad-custard.html
@@ -6,7 +6,7 @@
     <title>Fruit Salad Custard</title>
   </head>
   <body>
-    <h1>Fruit Salad Custard</h1>
+    <h1 class="top-heading">Fruit Salad Custard</h1>
       <img src="../img/fruit-salad-custard.jpg" height="325" width="250"
         alt="A cup of fruit salad filled with custard.">
     <h2>Description</h2>
