Assign existing top-heading class to main header

--- a/projects/foundations_course/css_foundations/odin-recipes-css/recipes/basic-omelette.html
+++ b/projects/foundations_course/css_foundations/odin-recipes-css/recipes/basic-omelette.html
@@ -6,7 +6,7 @@
     <title>Basic Omelette</title>
   </head>
   <body>
-    <h1>Basic Omelette</h1>
+    <h1 class="top-heading">Basic Omelette</h1>
       <img src="../img/basic-omelette.jpg" height="341.5" width="512">
     <h2>Description:</h2>
       <p>
