Assign new class to description element

--- a/projects/foundations_course/css_foundations/odin-recipes-css/recipes/basic-omelette.html
+++ b/projects/foundations_course/css_foundations/odin-recipes-css/recipes/basic-omelette.html
@@ -9,7 +9,7 @@
     <h1 class="top-heading">Basic Omelette</h1>
       <img src="../img/basic-omelette.jpg" height="341.5" width="512">
     <h2>Description:</h2>
-      <p>
+      <p class="recipe-description">
         Sometimes you have no time to cook up a full breakfast, which
         is where a simple omelette comes in, since it's quick and easy
         to cook.
