Assign new class to description element

--- a/projects/foundations_course/css_foundations/odin-recipes-css/recipes/fruit-salad-custard.html
+++ b/projects/foundations_course/css_foundations/odin-recipes-css/recipes/fruit-salad-custard.html
@@ -10,7 +10,7 @@
       <img src="../img/fruit-salad-custard.jpg" height="325" width="250"
         alt="A cup of fruit salad filled with custard.">
     <h2>Description</h2>
-      <p>
+      <p class="recipe-description">
         This sweet and fruity salad is sure to bring a smile to everyone
         on the dining table after a hearty meal.
       </p>
