Nest recipe list into a container with new class

--- a/projects/foundations_course/html_foundations/odin-recipes/index.html
+++ b/projects/foundations_course/html_foundations/odin-recipes/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <div class="recipe-list">
       <ul>
         <li>
           <a href="./recipes/fruit-salad-custard.html">Fruit Salad Custard</a>
@@ -14,5 +15,6 @@
           <a href="./recipes/basic-omelette.html">Basic Omelette</a>
         </li>
       </ul>
+    </div>
   </body>
 </html>
